src/components/TopBar/TopBar.module.scss
.topBar
{
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	padding: 0 24px;
	height: calc(50px + 16px * 2 + env(safe-area-inset-top));
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: space-between;
	flex-wrap: nowrap;
	z-index: 10;
	pointer-events: all;
	background: var(--black-0);
	backdrop-filter: blur(0px);
	border-bottom: 1px solid var(--white-0);

	&.scrolledTopBar
	{
		background: var(--black-25);
		backdrop-filter: var(--blur-bg);
		border-bottom: 1px solid var(--white-15);
	}

	& > p
	{
		position: absolute;
		top: 50%;
		left: 50%;
		transform: translate(-50%, -50%);
		font-size: var(--larger-font-size);
		font-weight: 600;
		color: var(--white-75);
		text-align: center;
	}
}

